style(guideline): z-index fix

--- a/projects/guideline/src/assets/scss/_led.scss
+++ b/projects/guideline/src/assets/scss/_led.scss
@@ -28,7 +28,7 @@ header {
 
   padding: size(10px) size(30px);
   position: absolute;
-  z-index: 10;
+  z-index: 1;
   top: 0;
   left: 0;
   right: 0;
